[project]
name = "hass-nature-remo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "homeassistant>=2024.12.5",
    "voluptuous>=0.15.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
# addopts = "--base-url http://0.0.0.0:5001"  # Commented out - requires pytest-base-url plugin
